force-app/main/default/objects/Field_Trip__Object_Analysis__c/fields/Field_Trip__isCustom__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__isCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom</label>
    <type>Checkbox</type>
</CustomField>