force-app/main/default/objects/Field_Trip__Object_Analysis__c/fields/Field_Trip__Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Field_Trip__Record_Types__c</fullName>
    <label>Record Types</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>