force-app/main/default/objects/Field_Trip__Object_Analysis__c/listViews/Field_Trip__All_Field_Trips.listView-meta.xml
<ListView>
    <fullName>Field_Trip__All_Field_Trips</fullName>
    <columns>NAME</columns>
    <columns>Field_Trip__Object_Label__c</columns>
    <columns>Field_Trip__isCustom__c</columns>
    <columns>Field_Trip__Fields__c</columns>
    <columns>Field_Trip__Records__c</columns>
    <columns>Field_Trip__Last_Analyzed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Trips</label>
</ListView>