force-app/main/default/objects/Field_Trip__Object_Analysis__c/listViews/Field_Trip__Analyzed_Past_30_Days.listView-meta.xml
<ListView>
    <fullName>Field_Trip__Analyzed_Past_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Field_Trip__Object_Label__c</columns>
    <columns>Field_Trip__Filter__c</columns>
    <columns>Field_Trip__Fields__c</columns>
    <columns>Field_Trip__Last_Analyzed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Trip__Last_Analyzed__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Analyzed Past 30 Days</label>
</ListView>