force-app/main/default/objects/Field_Trip__Object_Analysis__c/listViews/Field_Trip__Custom_Object_Field_Trips.listView-meta.xml
<ListView>
    <fullName>Field_Trip__Custom_Object_Field_Trips</fullName>
    <columns>NAME</columns>
    <columns>Field_Trip__Object_Label__c</columns>
    <columns>Field_Trip__Filter__c</columns>
    <columns>Field_Trip__Fields__c</columns>
    <columns>Field_Trip__Last_Analyzed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Trip__isCustom__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Custom Object Field Trips</label>
</ListView>